--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "@types/socket.io": "^3.0.2",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.10",
+    "@types/socket.io": "^3.0.2",
     "@types/ws": "^8.5.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.8.3"
   }
 }
